@@ -1,5 +1,6 @@
 - Allow stack limit to be set separately for land, sea, and air units
 - Prevent rebasing from violating the stack limit
+- Fix incorrect ETAs shown for one tile paths when railroad movement is limited
 
 - Apply the stack limit separately to land, sea, and air units
 - Option to exclude cities from the unit stack limit
